--- a/requirements.txt
+++ b/requirements.txt
@@ -1,209 +1,9 @@
-﻿absl-py==2.1.0
-aenum==3.1.15
-affine==2.4.0
-albucore==0.0.23
 albumentations==2.0.5
-annotated-types==0.7.0
-anyio==4.6.2.post1
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-astunparse==1.6.3
-async-lru==2.0.4
-attrs==23.2.0
-babel==2.16.0
-beautifulsoup4==4.12.3
-bleach==6.2.0
-boto3==1.36.26
-botocore==1.36.26
-branca==0.8.1
-cachetools==5.5.0
-certifi==2024.6.2
-cffi==1.17.1
-charset-normalizer==3.3.2
-click==8.1.7
-click-plugins==1.1.1
-cligj==0.7.2
-contourpy==1.2.1
-cycler==0.12.1
-dataclasses-json==0.6.7
-defusedxml==0.7.1
-dm-tree==0.1.8
-docker-pycreds==0.4.0
-docstring_parser==0.16
-earthengine-api==1.3.0
-eeconvert==0.1.22
-efficientnet==1.0.0
-etils==1.10.0
-fastjsonschema==2.20.0
-filelock==3.15.4
-flatbuffers==24.3.25
-folium==0.19.4
-fonttools==4.53.0
-fqdn==1.5.1
-fsspec==2024.6.1
-gast==0.5.4
-#GDAL==3.9.0
-geojson==3.2.0
-geopandas==1.0.0
-gitdb==4.0.12
-GitPython==3.1.44
-google-api-core==2.22.0
-google-api-python-client==2.151.0
-google-auth==2.36.0
-google-auth-httplib2==0.2.0
-google-cloud-core==2.4.1
-google-cloud-storage==2.18.2
-google-crc32c==1.6.0
-google-pasta==0.2.0
-google-resumable-media==2.7.2
-googleapis-common-protos==1.65.0
-greenlet==3.1.1
-grpcio==1.64.1
-h11==0.14.0
-h5py==3.11.0
-httpcore==1.0.6
-httplib2==0.22.0
-httpx==0.27.2
-idna==3.7
-image-classifiers==1.0.0
-imageio==2.34.1
-imgaug==0.2.7
-immutabledict==4.2.0
-importlib_resources==6.4.5
-intel-openmp==2021.4.0
-ipywidgets==8.1.5
-isoduration==20.11.0
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-json5==0.9.25
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter==1.1.1
-jupyter-console==6.6.3
-jupyter-events==0.10.0
-jupyter-lsp==2.2.5
-jupyter_server==2.14.2
-jupyter_server_terminals==0.5.3
-jupyterlab==4.2.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.13
 keras==3.8.0
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.5
-lazy_loader==0.4
-libclang==18.1.1
-Markdown==3.6
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-marshmallow==3.21.3
-matplotlib==3.9.0
-mdurl==0.1.2
-mistune==3.0.2
-mkl==2021.4.0
-mkl-service==2.4.0
-ml-dtypes==0.4.1
-mpmath==1.3.0
-mypy-extensions==1.0.0
-namex==0.0.8
-nbclient==0.10.0
-nbconvert==7.16.4
-nbformat==5.10.4
-networkx==3.3
-notebook==7.2.2
-notebook_shim==0.2.4
-oauthlib==3.2.2
-opencv-python==4.10.0.82
-opencv-python-headless==4.10.0.82
-opt-einsum==3.3.0
-optree==0.11.0
-overrides==7.7.0
-pandas==2.2.2
-pandocfilters==1.5.1
-pillow==10.3.0
-prometheus_client==0.21.0
-promise==2.3
-proto-plus==1.25.0
-protobuf==4.25.3
-pyarrow==18.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.11.3
-pydantic_core==2.33.1
-pyogrio==0.9.0
-pyparsing==3.1.2
-pyproj==3.6.1
-python-json-logger==2.0.7
-pytz==2024.1
-pywin32==306
-pywinpty==2.0.14
-PyYAML==6.0.1
+Keras_Applications==1.0.8
+matplotlib==3.10.3
+numpy==1.26.4
 rasterio==1.3.10
-referencing==0.35.1
-requests==2.32.3
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.7.1
-rpds-py==0.21.0
-rsa==4.9
-s3transfer==0.11.2
-scikit-image==0.23.2
-scikit-learn==1.5.0
-scipy==1.13.1
-segmentation-models==1.0.1
-Send2Trash==1.8.3
-sentinel==1.0.0
-sentinelhub==3.10.2
-sentry-sdk==2.24.1
-setproctitle==1.3.5
-setuptools==69.5.1
-shapely==2.0.4
-simple-parsing==0.1.6
-simsimd==6.2.1
-smmap==5.0.2
-sniffio==1.3.1
-snuggs==1.4.7
-soupsieve==2.6
-SQLAlchemy==2.0.38
-stringzilla==3.12.3
-sympy==1.12.1
-tbb==2021.13.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
+segmentation_models==1.0.1
 tensorflow==2.18.0
-tensorflow-datasets==4.9.7
-tensorflow-metadata==1.16.1
 tensorflow_intel==2.18.0
-termcolor==2.4.0
-terminado==0.18.1
-threadpoolctl==3.5.0
-tifffile==2024.5.22
-tinycss2==1.4.0
-toml==0.10.2
-tomli==2.0.1
-tomli_w==1.0.0
-torch==2.3.1
-tqdm==4.66.4
-types-python-dateutil==2.9.0.20241003
-typing-inspect==0.9.0
-typing-inspection==0.4.0
-tzdata==2024.1
-uri-template==1.3.0
-uritemplate==4.1.1
-urllib3==2.2.1
-utm==0.7.0
-wandb==0.19.8
-webcolors==24.8.0
-webencodings==0.5.1
-websocket-client==1.8.0
-Werkzeug==3.0.3
-wheel==0.43.0
-widgetsnbextension==4.0.13
-wrapt==1.16.0
-xyzservices==2025.1.0
